--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <link
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -27,14 +28,14 @@
     </li>
   </ul>
 </nav>
-<link rel="stylesheet" href="style.css">
+
 <!-- END NAV -->
 
 <!-- START WELCOME SECTION -->
 
 <section id="welcome-section" class="welcome-section">
   <h1>Hey, I am <a id="Ege" href="#">Ege!</a></h1>
-  <p> web developer <></p>
+  <p> software dev <></p>
 </section>
 
 <!-- END WELCOME SECTION -->
@@ -42,9 +43,42 @@
 <!-- START PROJECTS SECTION -->
 
 <section id="projects" class="projects-section">
-  <h2 class="projects-section-header">These are some of my projects</h2>
+  <h2 class="projects-section-header">Projects</h2>
 
   <div class="projects-grid">
+    <a
+      href="https://egekaplan.github.io/Catculator/"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="https://egekaplan.github.io/Catculator/catSit.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Catculator
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    
+    <a
+      href="https://github.com/egekaplan/summonerApi"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="https://egekaplan.github.io/Catculator/catSit.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        LoL Summoner Tracker
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
     <a
       href="https://codepen.io/egekaplan/pen/XWZjbpd"
       target="_blank"
