--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
+    <a
+      href="https://github.com/egekaplan/centeredbutton"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="https://egekaplan.github.io/Catculator/catSit.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Centered Button
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
     
     <a
       href="https://github.com/egekaplan/summonerApi"
@@ -70,7 +86,7 @@
     >
       <img
         class="project-image"
-        src="https://egekaplan.github.io/Catculator/catSit.png"
+        src="https://thumbs.dreamstime.com/b/milan-italy-november-league-legends-logo-website-homepage-milan-italy-november-league-legends-logo-w-106086142.jpg"
         alt="project"
       />
       <p class="project-title">
