--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        Catculator
+        Catculator 
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -69,7 +69,7 @@
     >
       <img
         class="project-image"
-        src="https://egekaplan.github.io/Catculator/catSit.png"
+        src="centeredBtn.png"
         alt="project"
       />
       <p class="project-title">
@@ -127,44 +127,13 @@
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
-    <a
-      href="https://codepen.io/egekaplan/pen/RwQGPYe"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="https://thumbs.dreamstime.com/b/online-marketing-portfolio-icon-element-premium-quality-graphic-design-signs-symbols-collection-websites-web-white-144857696.jpg"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        This page
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-    <a
-      href="https://codepen.io/egekaplan/pen/RwQGPYe"
-      target="_blank"
-      class="project project-tile"
-    >
-      
-    </a>
+
   </div>
 
-  <a
-    href="https://codepen.io/egekaplan"
-    class="btn btn-show-all"
-    target="_blank"
-    >Show all<i class="fas fa-chevron-right"></i
-  ></a>
 </section>
 
 <section id="contact" class="contact-section">
-  <div class="contact-section-header">
-    <h2>Let's work together...</h2>
-    <p>How do you take your coffee?</p>
-  </div>
+  
   <div class="contact-links">
    
     <a
@@ -182,9 +151,6 @@
     >
     <a href="mailto:egekaplann@gmail.com" class="btn contact-details"
       ><i class="fas fa-at"></i> Send a mail</a
-    >
-    <a href="tel:555-555-5555" class="btn contact-details"
-      ><i class="fas fa-mobile-alt"></i> Call me</a
     >
   </div>
 </section>
