--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <!-- START WELCOME SECTION -->
 
 <section id="welcome-section" class="welcome-section">
-  <h1>Hey, I am <a id="Ege" href="#">Ege!</a></h1>
-  <p> software dev <></p>
+  <h1>Hello, I am <a id="Ege" href="#">Ege!</a></h1>
+  <p> Industrial Engineering graduate with a focus in software development. I am a work-in-progress, striving to get better in the development scene. Please feel free to look around and please do not hesitate contacting me!</p>
 </section>
 
 <!-- END WELCOME SECTION -->
@@ -46,6 +46,22 @@
   <h2 class="projects-section-header">Projects</h2>
 
   <div class="projects-grid">
+    <a
+      href="https://github.com/egekaplan/itemUpgradeDecider"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="upgradeDecider.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Upgrade Chance Calculator 
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
     <a
       href="https://egekaplan.github.io/Catculator/"
       target="_blank"
