--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <section id="welcome-section" class="welcome-section">
   <h1>Hello, I am <a id="Ege" href="#">Ege!</a></h1>
-  <p> Industrial Engineering graduate with a focus in software development. I am a work-in-progress, striving to get better in the development scene. Please feel free to look around and please do not hesitate contacting me!</p>
+  <p>I've got a few fun projects, do not hesitate to check them out!</p>
 </section>
 
 <!-- END WELCOME SECTION -->
